--- a/sass/_posts.sass
+++ b/sass/_posts.sass
@@ -13,7 +13,7 @@ article.process
         a
             color: black
     img
-        width: 100%
+        max-width: 100%
         display: block
     ul.tags
         li
